@@ -8,7 +8,7 @@ use Apache2::RequestRec;
 use overload '""' => sub { shift->as_string() }, fallback => 1;
 
 push our @ISA, "APR::Request::Cookie";
-our $VERSION = "2.05-dev";
+our $VERSION = "2.06";
 
 sub new {
     my ($class, $r, %attrs) = @_;
